Fixed overflow not showing

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1046,6 +1046,7 @@ a.dropdown-toggle::after {
 
 #resourcesBox .content {
   padding-bottom: 50px;
+  overflow: visible;
 }
 
 .bigLink {
